[project]
name = "asymmetric-tiling-comfyui"
description = "Nodes:Asymmetric_Tiling_KSampler. "
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/alsritter/asymmetric-tiling-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "asymmetric-tiling-comfyui"
Icon = ""
